mentioned as sample project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Hello World</h1>
     <h3>Good Morning to all...</h3>
-    <h2>sample project</h2>
+    <h2>This is a sample project</h2>
 </body>
 </html>
